--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://Tamilmani:254200@cluster0.ynyulfg.mongodb.net/opticals
+mongodb+srv://Tamilmani:254200@cluster0.ynyulfg.mongodb.net/opticals?retryWrites=true&w=majority&appName=Cluster0
